# api/controllers/customerDB.js
@@ -2,6 +2,7 @@ const Constant = require('../constants/constant');
 const Op = require('sequelize').Op;
 const Result = require('../constants/result');
 var moment = require('moment');
+var fs = require('fs');
 var mCustomerDB = require('../model/customerDB')
 var database = require('../database');
 async function deleteRelationshipCustomerDB(db, listID) {
@@ -13,6 +14,9 @@ async function deleteRelationshipCustomerDB(db, listID) {
         }
     })
 }
+const mtblCustomer = require('../model/customer');
+const mtblCustomerDB = require('../model/customerDB');
+
 module.exports = {
     getListCustomerDB: (req, res) => {
         let params = req.query;
@@ -63,10 +67,10 @@ module.exports = {
         })
     },
     createDatabase: (req, res) => {
-        let body = req.query;
+        let body = req.body;
         database.connectDBCustomer().then(async db => {
             if (db) {
-                const path = 'D:/workProject/struck_nodejs_new/struck.text';
+                const path = 'D:/workProject/struck_new/struck.text';
                 fs.readFile(path, { encoding: 'utf-8' }, async function(err, data) {
                     let txtCreateDB = data;
                     let customerID = null
@@ -82,8 +86,8 @@ module.exports = {
                     }).then(data => {
                         customerID = data.ID ? data : null
                     }).catch(err => {
-                        console.log(err + '');
-                        return res.json(Result.CREATE_DB_FAIL)
+                        if (err)
+                            res.json(Result.CREATE_DB_FAIL)
                     })
                     await mtblCustomerDB(db).create({
                         IDCustomer: customerID,
@@ -94,20 +98,65 @@ module.exports = {
                         NameDB: body.nameDB ? body.nameDB : '',
                         Password: body.password ? body.password : '',
                     }).catch(err => {
-                        console.log(err + '');
-                        return res.json(Result.CREATE_DB_FAIL)
+                        if (err)
+                            res.json(Result.CREATE_DB_FAIL)
                     })
+                    await db.query('CREATE DATABASE ' + body.nameDB + '_DB').then(async data => {
+                        database.connectDatabaseWithNameDB(body.nameDB + '_DB').then(async dbNew => {
+                            await dbNew.query(txtCreateDB).then(data => {
+                                var result = {
+                                    status: Constant.STATUS.FAIL,
+                                    message: 'Tạo cơ sở dữ liệu thành công',
+                                }
+                                res.json(result);
+                            }).catch(err => {
+                                console.log(err + '');
+                            });
+                        })
 
-                    await db.query('CREATE DATABASE STRUCK_TEST_DB;').catch(err => {
+                    }).catch(err => {
                         console.log(err + '');
-                        return res.json(Result.CREATE_DB_FAIL)
                     });
-                    // db.query(txtCreateDB).then(mess => {
-                    //     console.log(mess);
-                    // })
+
                 });
             } else {
                 res.json(Result.CREATE_DB_FAIL)
+            }
+        })
+    },
+    changeStatus: (req, res) => {
+        let body = req.body;
+        database.connectDBCustomer().then(async db => {
+            if (db) {
+                try {
+                    mCustomerDB(db).update({
+                        Status: body.status,
+                    }, {
+                        where: {
+                            ID: body.id ? body.id : null
+                        }
+                    }).then(data => {
+                        if (data) {
+                            var result = {
+                                status: Constant.STATUS.SUCCESS,
+                                message: Constant.MESSAGE.ACTION_SUCCESS,
+                            }
+                            res.json(result);
+                        } else {
+                            var result = {
+                                status: Constant.STATUS.FAIL,
+                                message: Constant.MESSAGE.DATA_NOT_FOUND,
+                            }
+                            res.json(result);
+                        }
+                    })
+
+                } catch (error) {
+                    console.log(error);
+                    res.json(Result.SYS_ERROR_RESULT)
+                }
+            } else {
+                res.json(Constant.MESSAGE.USER_FAIL)
             }
         })
     },
